# angular-labs-playground

./: .bazelrc  .gitignore  BUILD.bazel  NOTES.md  WORKSPACE  package.json  rules_docker.patch  tsconfig.json
experimental/scheduler/demos/search-app/: BUILD.bazel  app.ts  index.html  main.ts  repeat.ts  styles.css  youtube.ts
patches/: @angular+bazel+9.0.0-rc.7.patch
src/: BUILD.bazel  index.html  main.ts  tsconfig.json
src/demos/aio-modern/: BUILD.bazel  index.ng.html  index.scss
src/demos/aio-modern/styles/: BUILD.bazel
src/demos/embedded/: BUILD.bazel  index.html
src/demos/embedded/embedded-app/: BUILD.bazel  api-service.ts  embedded-app.ts  main.ts  platform.ts
src/demos/embedded/host-app/: BUILD.bazel  host-app.scss  host-app.ts
src/demos/embedded/platform/: BUILD.bazel  host_element.ts  index.ts  private_imports.ts  renderer.ts  stylesheet.ts
src/demos/hello-world/: BUILD.bazel  hello-world.ts  index.html
src/platform/: BUILD.bazel  component_host.ts  host_element.ts  platform.spec.ts  platform.ts  styles.ts
